# shelfshift

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  vercel.json
app/: __init__.py  config.py  main.py  models.py  schemas.py
app/helpers/: __init__.py  exporting.py  importing.py  payload.py  rendering.py
app/models/: __init__.py  entities.py  helpers.py  serialization.py
app/routers/: api.py  web_csv.py  web_url.py
app/services/: __init__.py  importer.py  product_url_detection.py
app/services/csv_importers/: __init__.py  batch.py  bigcommerce.py  common.py  detection.py  shopify.py  squarespace.py  wix.py  woocommerce.py
app/services/exporters/: __init__.py  batch.py  bigcommerce_csv.py  shopify_csv.py  squarespace_csv.py  utils.py  weight_units.py  wix_csv.py  woocommerce_csv.py
app/services/importer/: __init__.py  model_v2.py  product_url_detection.py
app/services/logging/: __init__.py  product_payloads.py
app/web/static/: app.js  styles.css
app/web/templates/: _product_editor.html  _product_editor_batch.html  (+4 more)
csv_examples/: bigcommerce-legacy.csv  bigcommerce-modern.csv  shopify.csv  squarespace.csv  wix.csv
guides/: INDEX.md
scripts/: fetch_importer_raw_payloads.py
shelfshift/: __init__.py  config.py
shelfshift/cli/: __init__.py  main.py
shelfshift/core/: __init__.py  api.py  config.py  registry.py
shelfshift/server/: config.py  main.py
src/shelfshift/: __init__.py
tests/: _app_helpers.py  conftest.py  test_aliexpress_parser.py  test_api_import_serialization.py  test_app.py  test_app_canonical.py  test_bigcommerce_csv_exporter.py  test_bigcommerce_csv_golden.py  test_canonical_facade_exports.py  test_core_facade_exports.py  test_core_json_payload_helpers.py  test_exporter_utils_canonical.py  test_exporter_utils_dual_read.py  test_facade_exports.py  test_import_logging.py  test_importer_golden_normalization.py  test_importer_phase4_dual_write.py  test_model_v2.py  test_models_module.py  test_product_url_detection.py  test_shopify_csv_exporter.py  test_shopify_csv_golden.py  test_squarespace_csv_exporter.py  test_squarespace_csv_golden.py  test_squarespace_importer.py  test_wix_csv_exporter.py  test_wix_csv_golden.py  test_woocommerce_csv_exporter.py  test_woocommerce_csv_golden.py  test_woocommerce_importer.py
tests/api/: test_api_import_serialization.py  test_app.py  test_app_canonical.py  test_batch_csv_feature.py  test_batch_url_feature.py  test_csv_import_feature.py  test_import_logging.py  test_runtime_config.py
tests/cli/: test_runtime_config_cli.py
tests/csv_importers/: test_batch_import.py  test_csv_examples_round_trip.py  test_detection.py
tests/exporters/: test_batch_exporters.py  test_bigcommerce_csv_exporter.py  test_bigcommerce_csv_golden.py  test_exporter_utils_canonical.py  test_shopify_csv_exporter.py  test_shopify_csv_golden.py  test_squarespace_csv_exporter.py  test_squarespace_csv_golden.py  test_wix_csv_exporter.py  test_wix_csv_golden.py  test_woocommerce_csv_exporter.py  test_woocommerce_csv_golden.py
tests/fixtures/: shopify_one_product_two_variants_full.csv  squarespace_one_product_two_variants_full.csv  woocommerce_one_product_two_variations_full.csv
tests/helpers/: _app_helpers.py  _csv_helpers.py  _model_builders.py
tests/importers/: test_aliexpress_parser.py  test_aliexpress_parser_canonical.py  test_identifier_helpers.py  test_importer_golden_normalization.py  test_product_url_detection.py  test_runtime_rapidapi_config.py  test_squarespace_importer.py  test_unmapped_field_helpers.py  test_woocommerce_importer.py
tests/models/: test_model_canonical.py  test_models_module.py
typeshift/: __init__.py  config.py
typeshift/cli/: __init__.py  main.py
typeshift/core/: __init__.py  api.py  config.py  registry.py
typeshift/server/: config.py  main.py
(+133 files in other folders)
