[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shelfshift"
version = "1.0.1"
description = "Developer toolkit for ecommerce catalog translation across URL/CSV sources and platform CSV targets."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["ecommerce", "csv", "catalog", "shopify", "woocommerce"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "babel>=2.17.0,<3.0.0",
    "fastapi>=0.116.0,<1.0.0",
    "httpx>=0.28.0,<1.0.0",
    "jinja2>=3.1.0,<4.0.0",
    "pandas>=2.2.0,<3.0.0",
    "python-dotenv>=1.1.0,<2.0.0",
    "python-multipart>=0.0.20,<1.0.0",
    "python-slugify>=8.0.0,<9.0.0",
    "requests>=2.32.0,<3.0.0",
    "uvicorn[standard]>=0.35.0,<1.0.0",
]

[project.scripts]
shelfshift = "shelfshift.cli.main:main"
shelfshift-server = "shelfshift.server.main:run"

[dependency-groups]
dev = [
    "playwright>=1.58.0",
    "pyflakes>=3.4.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["shelfshift*"]
exclude = ["api*"]

[tool.setuptools.package-data]
"shelfshift.server" = [
    "web/templates/*.html",
    "web/static/*",
]
