[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shelfshift"
version = "1.0.1"
description = "Developer toolkit for ecommerce catalog translation across URL/CSV sources and platform CSV targets."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["ecommerce", "csv", "catalog", "shopify", "woocommerce"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "python-dotenv>=1.1.0,<2.0.0",
    "python-slugify>=8.0.0,<9.0.0",
    "requests>=2.32.0,<3.0.0",
]

[project.scripts]
shelfshift = "shelfshift.cli.main:main"

[dependency-groups]
dev = [
    "pandas>=2.2.0,<3.0.0",
    "playwright>=1.58.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.4",
]

[tool.uv]
package = true

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]
exclude = [".venv", "docs"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4", "RUF"]
ignore = []
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
